# ChangeLog for net-p2p/litecoin-qt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*litecoin-qt-0.6.3c (12 May 2013)

  12 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +litecoin-qt-0.6.3c.ebuild, +metadata.xml:
  Initial import. Based on bitcoin-qt ebuild.
