@@ -1,1 +1,1 @@
-DIST litecoin-v0.6.3c.tgz 1480232 SHA256 f566d24a1c05392329fbaabf3d09f8244d2da52de320ede4d8476f1f1f835bac SHA512 aec4f4f29c9626986433d1461416902a15fea8a386442c5dd657a816634efb21b9c2e1dce0e0b25510f087b6c6c2844a91f737ca2ab6cbfcf7889058334fd7f4 WHIRLPOOL a193053390d0b85b41d6d361c4fc49a8e5793836e1051a490781dbcc17c73900e9fb1a0909a0aafa6fb8f06feeb23de5a6ccb024be99df9924023746e9859ce5
+DIST litecoin-v0.8.3.7.tgz 4781577 SHA256 ba61cf8c4dfb156b1e33492335e92b224177c49e5a2e77ae45c0901a4538e81a SHA512 192a2874260c3416428830223c5e82f3970d6c5d0e80123c1d8a31e79428761ba46edc3fb002c01ba16116aa3e0031a18fd7a3a8429a8cbc1caae33acdd97e1e WHIRLPOOL 5303b6ed8a9ec0bce770a324d073718945422521aad27cec03475eaf16b0bedd0464c026ff6c454d923d0e07946843a620a350ae90f0a19b38db9ec761a04567
