@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*litecoin-qt-0.8.3.7 (16 Aug 2013)
+
+  16 Aug 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  -litecoin-qt-0.6.3c.ebuild, +litecoin-qt-0.8.3.7.ebuild:
+  Version bump.
+
 *litecoin-qt-0.6.3c (12 May 2013)
 
   12 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
